[package]
name = "text_diff"
version = "2.0.0"
authors = ["Johann Hofmann <mail@johann-hofmann.com>"]
description = "A Rust text diffing and assertion library."
repository = "https://github.com/johannhof/difference.rs"
documentation = "https://johannhof.github.io/difference.rs/difference/index.html"
readme = "README.md"
categories = ["text-processing", "development-tools::testing"]
keywords = ["diff", "text", "compare", "changes", "assert"]
license = "MIT"
edition = "2021"

[badges]
travis-ci = { repository = "johannhof/difference.rs" }
appveyor = { repository = "johannhof/difference.rs" }

[lib]
name = "text_diff"

[[bin]]
name = "difference"
path = "src/main.rs"
doc = false

[features]
default = []
bin = ["getopts"]

[dependencies]
getopts = {version = "0.2", optional = true}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
term = "0.7"
quickcheck = "1.0"
